[tool.poetry]
name = "rdp_testcase"
version = "0.1.0"
description = "Obscent free http proxy server"
authors = ["Andrey Bodosov <a.bodosov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.12.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
